fix overflow in menu

--- a/css/header.css
+++ b/css/header.css
@@ -107,7 +107,7 @@
         text-align: center;
     }
 
-    .menu-burger__header {
+    .header__burger {
         display: block;
         z-index: 9999;
         position: absolute;
@@ -117,7 +117,7 @@
         height: 20%;
     }
 
-    .menu-burger__header span, .menu-burger__header:after, .menu-burger__header:before{
+    .header__burger span, .header__burger:after, .header__burger:before{
         height: 1vw;
         width: 100%;
         position: absolute;
@@ -125,32 +125,32 @@
         transition: 0.4s;
     }
 
-    .menu-burger__header:after, .menu-burger__header:before{
+    .header__burger:after, .header__burger:before{
         content: '';
     }
 
-    .menu-burger__header span{
+    .header__burger span{
         top: 40%;
     }
 
-    .menu-burger__header:after{
+    .header__burger:after{
         bottom: 0;
     }
 
-    .menu-burger__header:before{
+    .header__burger:before{
         top: 0;
     }
 
-    .menu-burger__header.open-menu span {
+    .header__burger.open-menu span {
         opacity:0;
     }
 
-    .menu-burger__header.open-menu:before {
+    .header__burger.open-menu:before {
         transform: rotate(38deg);
         top: 35%;
     }
 
-    .menu-burger__header.open-menu:after {
+    .header__burger.open-menu:after {
         transform: rotate(-38deg);
         bottom: 50%;
     }
@@ -171,11 +171,10 @@
     }
 
     .header__menu {
-        margin: 0 1.5vw 0 0;
+        margin: 0;
         padding: 0;
         display: flex;
         flex-direction: column;
-        overflow: auto;
         gap: 10vw;
     }
 
